--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.jackson.serialization.indent_output=true
+
+context.initializer.classes=ch.frankel.blog.springfu.migrationdemo.BeansInitializer
