--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,18 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-r2dbc</artifactId>
+            <version>1.0.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.fu</groupId>
+            <artifactId>spring-fu-kofu</artifactId>
+            <version>0.2.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -44,14 +50,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-h2</artifactId>
+            <version>0.8.2.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
@@ -103,13 +104,13 @@
     <repositories>
         <repository>
             <id>Spring Milestones libs</id>
-            <url>http://repo.spring.io/milestone/</url>
+            <url>https://repo.spring.io/milestone/</url>
         </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <id>Spring Milestones libs</id>
-            <url>http://repo.spring.io/milestone/</url>
+            <id>Spring Milestones plugins</id>
+            <url>https://repo.spring.io/milestone/</url>
         </pluginRepository>
     </pluginRepositories>
 </project>
